[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "music-mesa-tables"
description = "MESA tables for post-processing of MUSIC simulations"
readme = "../README.md"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
license = {file = "../LICENSE"}
urls = {homepage = "https://github.com/amorison/music_mesa_tables"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]

[tool.maturin]
profile = "release"
compatibility = "manylinux2014"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]

[tool.uv]
reinstall-package = ["music-mesa-tables"]
